--- a/HeartOfGold/packages.config
+++ b/HeartOfGold/packages.config
@@ -3,6 +3,9 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
   <package id="AutoMapper" version="4.1.0" targetFramework="net461" />
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
+  <package id="bootstrap.less" version="3.3.5" targetFramework="net461" />
+  <package id="Bootstrap.v3.Datetimepicker" version="4.17.45" targetFramework="net461" />
+  <package id="Bootstrap.v3.Datetimepicker.CSS" version="4.17.45" targetFramework="net461" />
   <package id="Chart.js" version="2.7.2" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="fullcalendar" version="3.9.0" targetFramework="net461" />
